--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
                     <groupId>com.jolbox</groupId>
                     <artifactId>bonecp</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
