--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.3.11.v20160721</version>
+            </plugin>
+
         </plugins>
 
     </build>
